<resources>
    <string name="app_name">Tripair</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_name">User Name:</string>
    <string name="gender">Gender:</string>
    <string name="birth_date">Birth Date:</string>
    <string name="first_name">First Name:</string>
    <string name="second_language">Second Language:</string>
    <string name="smoking">Smoking:</string>
    <string name="country">Country:</string>
    <string name="about_me">About Me:</string>
    <string name="first_language">First Language:</string>
    <string name="languages">Languages:</string>
    <string name="third_language">Third Language:</string>
    <string name="last_name">Last Name:</string>
    <string name="textview">TextView</string>
    <string name="picture">Picture:</string>
    <string name="enter_last_name">Enter last name...</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="man">Man</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="female">Female</string>
    <string name="message">Message</string>
    <string name="messageTo">Message To</string>
    <string name="title_activity_contact_msg">ContactMsgActivity</string>
</resources>
