<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#34495E"
    tools:context=".EditSettingProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editProfile"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@string/edit_profile"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/first_name"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed"
            android:textColorHint="@color/common_google_signin_btn_text_dark_pressed"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/LastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/last_name"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed"
            android:textColorHint="@color/common_google_signin_btn_text_dark_pressed"
            tools:ignore="Autofill,LabelFor" />

        <CheckBox
            android:id="@+id/smokingBox"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/edit_profile"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/picture"
                android:layout_width="wrap_content"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:text="@string/picture"
                android:textColor="@color/common_google_signin_btn_text_dark_pressed" />

            <ImageView
                android:id="@+id/imgView"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/btnChoose"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="Choose Picture" />


        </LinearLayout>


        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="saveButtonClicked"
            tools:text="Save Changes" />

    </LinearLayout>
</ScrollView>